--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    
+    <style>
+      body, html{
+        margine: 0px;
+      }
+    </style>
   </head>
 
   <body>
-    
+    <h1>Lepton</h1>
   </body>
 </html>
