--- a/index.html
+++ b/index.html
@@ -2,13 +2,20 @@
 <html>
   <head>
     <style>
+      @font-face {
+        font-family: "Fira Code";
+        src: url("fonts/FiraCodeNerdFont-Regular.ttf");
+      }
       body, html{
         margine: 0px;
+      }
+      p{
+        font-family: "Fira Code";
       }
     </style>
   </head>
 
   <body>
-    <h1>Lepton</h1>
+    <p>Lepton</p>
   </body>
 </html>
