--- a/404.html
+++ b/404.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>404 page not found</title>
     <link href="css/main.css" rel="stylesheet" type="text/css" />
   </head>
 
