--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Lepton cyber sec</title>
     <link href="css/main.css" rel="stylesheet" type="text/css" />
   </head>
 
