--- a/chat/index.html
+++ b/chat/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Lepton chat</title>
     <link href="../css/main.css" rel="stylesheet" type="text/css" />
   </head>
 
